# TenderFox

./: .env  .env.example  .gitignore  CHECKLIST.md  DEPLOY_RU_YC.md  Dockerfile  LEGAL.md  MARKETING.md  PLAN.md  README.md  ROADMAP.md  TODO.md  WORK_REPORT.md  docker-compose.yml  killer_feature.py  payments.py  pyproject.toml  scraper.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_users_and_phone_verification.py  0003_subscriptions_user_id.py  0004_telegram_pending_phones.py  0005_subscriptions_user_id_not_null.py  0006_drop_subscriptions_chat_id.py  0007_phone_verification_lockout.py
app/api/: deps.py  router.py
app/api/routers/: auth.py  health.py  search.py  subscriptions.py  tenders.py
app/core/: config.py
app/db/: session.py
app/integrations/telegram/: bot.py
app/models/: __init__.py  delivery.py  phone_verification.py  subscription.py  telegram_link.py  telegram_pending_phone.py  tender.py  user.py
app/repositories/: __init__.py  subscriptions.py  tenders.py
app/schemas/: __init__.py  auth.py  subscription.py  tender.py
app/services/: jwt.py  scheduler.py
app/sources/gosplan/: client.py  normalize.py
app/utils/: phone.py
docs/: CHECKLIST.md  DEPLOY_RU_YC.md  IMPROVEMENTS_TODO.md  LEGAL_RU.md  PAYMENTS_YOOKASSA_NOTES.md  PLAN.md  ROADMAP.md  TODO.md  WORK_REPORT.md
tests/: test_auth_rate_limit.py
web/: index.html  style.css
