[tool.poetry]
name = "tenderfox"
version = "0.1.0"
description = "TenderFox — tender aggregator MVP (search → filters → subscriptions → Telegram notifications)."
authors = ["EzzzyGG"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
httpx = "^0.27.0"

# DB / migrations
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
alembic = "^1.13.0"

# Telegram bot
aiogram = "^3.5.0"

# Auth
pyjwt = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
